Change node category from 'function' to 'agile'

--- a/send-data/send-data.html
+++ b/send-data/send-data.html
@@ -1,6 +1,6 @@
 <script type="text/javascript">
     RED.nodes.registerType('send-data',{
-        category: 'function',
+        category: 'agile',
         color: '#a6bbcf',
         defaults: {
             //add validators here
