--- a/send-data/xively-send-data.html
+++ b/send-data/xively-send-data.html
@@ -1,5 +1,5 @@
 <script type="text/javascript">
-    RED.nodes.registerType('send-data',{
+    RED.nodes.registerType('xively-send-data',{
         category: 'agile',
         color: '#a6bbcf',
         defaults: {
@@ -19,9 +19,9 @@
     });
 </script>
 
-<script type="text/x-red" data-template-name="send-data">
+<script type="text/x-red" data-template-name="xively-send-data">
     <div class="form-row">
-    <label for="node-input-server"><i class="fa fa-globe"></i> Server</label> 
+    <label for="node-input-server"><i class="fa fa-globe"></i> Server</label>
     <input type="text" id="node-input-server">
     </div>
     <div class="form-row">
@@ -31,7 +31,7 @@
 
 </script>
 
-<script type="text/x-red" data-help-name="send-data">
+<script type="text/x-red" data-help-name="xively-send-data">
     <p>This is a node to push data into a Xively feed. The user needs to input the following values:</p>
     <p><b>Through the Config Node</b></p>
     <p><b>feedid:</b> which defines the Feed generated from a particular device. </p>
