--- a/send-data/xively-send-data.html
+++ b/send-data/xively-send-data.html
@@ -26,11 +26,11 @@
     <input type="text" id="node-input-server">
     </div>
     <div class="form-row">
-      <label for="node-input-variable"><i class="pie-chart"></i> Variable-Name</label>
+      <label for="node-input-variable"><i class="fa fa-pie-chart"></i> Variable-Name</label>
       <input type="text" id="node-input-variable" placeholder="Optical-Agile">
     </div>
     <div class="form-row">
-      <label for="node-input-serial"><i class="microchip"></i> Variable-Name</label>
+      <label for="node-input-serial"><i class="fa fa-microchip"></i> Serial-Number</label>
       <input type="text" id="node-input-serial" placeholder="agile-XXXX">
     </div>
 
