--- a/send-data/xively-send-data.html
+++ b/send-data/xively-send-data.html
@@ -5,23 +5,48 @@
       console.log.apply(console.log, arguments);
     }
 
+    // var http = document.location.protocol || "http:";
+    // var path = "/api/v1/entity/user/agile!@!agile-local";
+    // var host = document.location.hostname;
+    // //var host = '192.168.8.61';
+    // var port = '3000';
+    // idmUrl = http + "//" + host + ':' + port + path;
+
     var http = document.location.protocol || "http:";
-    var path = "/api/v1/entity/user/agile!@!agile-local";
+    var path = "/red/auth/token";
     var host = document.location.hostname;
     //var host = '192.168.8.61';
-    var port = '3000';
-    idmUrl = http + "//" + host + ':' + port + path;
+    var port = '1880';
+    nodeRedUrl = http + "//" + host + ':' + port + path;
+    // //Get the access token from the page url
+    // var inputUrl = new URL(document.location.href);
+    // //var inputUrl = new URL("http://192.168.8.61:8000/#access_token=RCc2Bi3vKmbo5MRCn5G0qJGBtkpiPKgJMeVo0CTqbANDSaP8jHWqhYOEWzXymodC&token_type=Bearer")
+    // var token = inputUrl.searchParams.get("access_token");
+    //
+    // $.ajax({
+    //   url: idmUrl,
+    //   type: 'GET',
+    //   // Fetch the stored token from localStorage and set in the header
+    //   headers: {"Authorization": "Bearer"+token}
+    // })
+    // .done(function(userData)
+    // {
+    //     log(userData);
+    // })
+    //  .fail( function(xhr, textStatus, errorThrown)
+    //  {
+    //      log("Request failed");
+    //  });
 
-    //Get the access token from the page url
-    var inputUrl = new URL(document.location.href);
-    //var inputUrl = new URL("http://192.168.8.61:8000/#access_token=RCc2Bi3vKmbo5MRCn5G0qJGBtkpiPKgJMeVo0CTqbANDSaP8jHWqhYOEWzXymodC&token_type=Bearer")
-    var token = inputUrl.searchParams.get("access_token");
-
+    $.post( nodeRedUrl, {client_id:"node-red-admin", grant_type: "password", scope: "*" , username:"admin", password:"password"}, function(data)
+{
+    log(data.access_token)
+    nodeRedUrl = http + "//" + host + ':' + port + "/red/flows"
     $.ajax({
-      url: idmUrl,
+      url: nodeRedUrl,
       type: 'GET',
       // Fetch the stored token from localStorage and set in the header
-      headers: {"Authorization": "Bearer"+token}
+      headers: {"Authorization": "Bearer "+data.access_token}
     })
     .done(function(userData)
     {
@@ -31,6 +56,12 @@
      {
          log("Request failed");
      });
+});
+
+    // $.get( "http://localhost:1880/auth/login" , function(data)
+    // {
+    // log(data);
+    // });
 
 
     RED.nodes.registerType('xively-send-data',{
